# unnamed-web-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.vscode.yml  post-create-hook.sh
.github/workflows/: linting.yml
proxy/: proxy-config.conf
template_python_django/: manage.py
template_python_django/template_python_django/: asgi.py  settings.py  urls.py  wsgi.py
unnamed_web_project/: manage.py
unnamed_web_project/core/: managers.py  models.py  urls.py
unnamed_web_project/core/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py
unnamed_web_project/core/templates/core/: home.html
unnamed_web_project/templates/: base.html
unnamed_web_project/unnamed_web_project/: asgi.py  settings.py  urls.py  wsgi.py
