[tool.poetry]
name = "template-python-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "template_python_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
