[tool.poetry]
name = "unnamed-web-project"
version = "0.1.0"
description = ""
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
psycopg2 = "^2.9.5"
django-tailwind = "^3.5.0"
uuid7 = "^0.1.0"
django-allauth = "^0.52.0"
docutils = "^0.19"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
